# gns3-mcp-server

./: .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  READY_FOR_GITHUB.md  STRUCTURE.md  mcp-server.json  omp_stdio_entry.py  pyproject.toml  requirements.txt  run-omp.sh  run.bat  run.sh
.agents/skills/gns3-mcp/: SKILL.md
.agents/skills/gns3-mcp/references/: capability-matrix.md  playbooks.md  setup.md
.gemini/: settings.json
docs/: CHANGELOG.md  MIGRATION.md  PROJECT_STRUCTURE.md  START_HERE.md  TOOL_REFERENCE.md  UPGRADE_SUMMARY.md
examples/: README.md  example_complete_network.py
src/gns3_mcp/: __init__.py  __main__.py  config_templates.py  gns3_client.py  server.py  server_lifecycle.py  ssh_client.py  telnet_client.py
src/gns3_mcp/workflow/: __init__.py  confirm.py  console_ops.py  envelopes.py  resolve.py  runner.py  topology.py
src/gns3_mcp/workflow/goals/: __init__.py  build_topology.py  configure_devices.py  diagnose_connectivity.py  finish_lab.py  manage_snapshot.py  prepare_image.py  prepare_lab.py  run_guest_commands.py
tests/: README.md  add_laptop2.py  bounce_interface.py  check_gns3_info.py  cleanup_test.py  configure_and_ping.py  configure_topology.py  debug_router.py  fix_router_ram.py  fix_topology.py  inspect_r1.py  recreate_links.py  replace_switch1.py  restart_router.py  restart_switch1.py  server_old.py  test_api.py  test_connectivity_step_by_step.py  test_goal_authorization.py  test_goal_completion.py  test_goal_tools.py  test_goal_topology.py  test_server_lifecycle.py  test_ssh_client.py  test_telnet_login.py  test_telnet_output.py  test_workflow_core.py  verify_mcp_features.py
