[project]
name = "gns3-mcp-server"
version = "2.0.0"
description = "Comprehensive MCP server for GNS3 network simulation and automation - 42 tools, modular architecture, AI-powered network management"
authors = [
    {name = "GNS3 MCP Server Team", email = "gns3-mcp@github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["gns3", "mcp", "network", "simulation", "automation", "ai", "cisco", "networking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Education",
]
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/wael-rd/gns3-mcp-server"
Documentation = "https://github.com/wael-rd/gns3-mcp-server/blob/main/docs/START_HERE.md"
Repository = "https://github.com/wael-rd/gns3-mcp-server"
"Bug Tracker" = "https://github.com/wael-rd/gns3-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gns3_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true